// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-chip> Component basic usage with attributes 1`] = `
<bolt-chip tag="span"
           data-attr="some attribute"
>
  <replace-with-grandchildren>
    <span data-attr="some attribute"
          class="c-bolt-chip"
    >
      <span class="c-bolt-chip__item-text">
        This is a chip
      </span>
    </span>
  </replace-with-grandchildren>
</bolt-chip>
`;

exports[`<bolt-chip> Component with link 1`] = `
<bolt-chip tag="a"
           url="!#"
>
  <replace-with-grandchildren>
    <a href="!#"
       class="c-bolt-chip"
    >
      <span class="c-bolt-chip__item-text">
        This is a chip with link
      </span>
    </a>
  </replace-with-grandchildren>
</bolt-chip>
`;
